feat: wallpaper script + keystroke in hypr config
adding a "wallpaper-switch" script.

adding some wallpapers.

binding the wallpaper-switch script to H.

--- a/configs/.config/hypr/hyprland.conf
+++ b/configs/.config/hypr/hyprland.conf
@@ -20,6 +20,7 @@ $imageEditor = flatpak run org.gimp.GIMP
 $codeEditor = codium
 $discordClient = flatpak run xyz.armcord.Armcord
 $lockscreen = swaylock
+$wallpaperChanger = sh /usr/bin/wallpaper-switch
 
 # Some default env vars.
 env = XCURSOR_SIZE,20
@@ -121,6 +122,7 @@ bind = $mainMod, G, exec, $imageEditor
 bind = $mainMod, N, exec, $lockscreen
 bind = $mainMod, O, exec, $discordClient
 bind = $mainMod, C, exec, $codeEditor
+bind = $mainMod, H, exec, $wallpaperChanger
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
