fix: waybar transparency was not always updated

--- a/configs/.config/hypr/hyprland.conf
+++ b/configs/.config/hypr/hyprland.conf
@@ -46,8 +46,10 @@ general {
 decoration {
     rounding = 5
 
-    layerrule = blur,waybar
-    layerrule = blur,wofi
+    layerrule = blur, waybar
+    layerrule = xray, waybar
+    layerrule = blur, wofi
+    layerrule = blur, alacritty
     
     blur {
         enabled = true
