feat: rick-roll binding, monitors, alacritty blur-bg
- adding a bind (sup+R) for a fullscreen rick roll
- adding specifications for my monitors + a gaming config in comment
- configuring background blur for alacritty

--- a/configs/.config/hypr/hyprland.conf
+++ b/configs/.config/hypr/hyprland.conf
@@ -3,6 +3,12 @@
 # =============================================
 
 monitor=,preferred,auto,1.20
+monitor=eDP-1,preferred,1599x0,1.20
+monitor=HDMI-A-1,preferred,0x0,1.20
+
+# Gaming config
+# monitor=HDMI-A-1,preferred,2000x2000,1.20
+
 
 # Execute once at every launches
 exec-once = swww-daemon & waybar
@@ -100,7 +106,7 @@ misc {
 }
 
 # Hyprland shortcuts
-bind = $mainMod, Q, killactive, 
+bind = $mainMod, Q, killactive,
 bind = $mainMod, M, exec, wlogout
 bind = $mainMod, V, togglefloating, 
 bind = $mainMod, P, pseudo, 
@@ -125,6 +131,7 @@ bind = $mainMod, N, exec, $lockscreen
 bind = $mainMod, O, exec, $discordClient
 bind = $mainMod, C, exec, $codeEditor
 bind = $mainMod, H, exec, $wallpaperChanger
+bind = $mainMod, R, exec, flatpak run org.videolan.VLC ~/Repos/dotfiles/videos/rick_roll.mp4 --fullscreen
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
