feat: .zshrc with basic styling, a banner, autocomletion.

--- a/configs/.config/hypr/hyprland.conf
+++ b/configs/.config/hypr/hyprland.conf
@@ -42,7 +42,7 @@ general {
     gaps_in = 10
     gaps_out = 30
     border_size = 2
-    col.active_border = rgba(8ec07cee) rgba(83a598ee) 90deg
+    col.active_border = rgb(CACACA)
     col.inactive_border = rgba(28282888)
     layout = dwindle
     allow_tearing = false
@@ -68,7 +68,7 @@ decoration {
     drop_shadow = yes
     shadow_range = 4
     shadow_render_power = 3
-    col.shadow = rgba(1a1a1aee)
+    col.shadow = rgba(1a1a1a55)
 }
 
 animations {
@@ -104,6 +104,12 @@ misc {
     disable_splash_rendering = true
     disable_hyprland_logo = true
 }
+
+# Windows's rules
+windowrulev2=float,class:(Alacritty)
+windowrulev2=maxsize 750 500,class:(Alacritty)
+windowrulev2=xray 0,class:(Alacritty)
+windowrulev2=noshadow,class:(Alacritty)
 
 # Hyprland shortcuts
 bind = $mainMod, Q, killactive,
