feat: custom wofi + fix wofi and rick_roll spam

--- a/configs/.config/hypr/hyprland.conf
+++ b/configs/.config/hypr/hyprland.conf
@@ -19,7 +19,7 @@ $mainMod = SUPER
 # Programs
 $terminal = alacritty
 $fileManager = thunar
-$menu = wofi --show drun
+$menu = wofi
 $mainBrowser = flatpak run io.gitlab.librewolf-community
 $secondaryBrowser = flatpak run com.brave.Browser
 $imageEditor = flatpak run org.gimp.GIMP
@@ -52,8 +52,10 @@ general {
 decoration {
     rounding = 5
 
-    layerrule = blur, waybar
     layerrule = xray, waybar
+    layerrule = xray, wofi
+    layerrule = xray, alacritty
+    layerrule = blur, waybar
     layerrule = blur, wofi
     layerrule = blur, alacritty
     
@@ -111,6 +113,7 @@ windowrulev2=maxsize 750 500,class:(Alacritty)
 windowrulev2=xray 0,class:(Alacritty)
 windowrulev2=noshadow,class:(Alacritty)
 
+
 # Hyprland shortcuts
 bind = $mainMod, Q, killactive,
 bind = $mainMod, M, exec, wlogout
@@ -129,7 +132,7 @@ bind =, XF86PowerOff, exec, wlogout
 # Applications shortcuts
 bind = $mainMod, Return, exec, $terminal
 bind = $mainMod, X, exec, $fileManager
-bind = $mainMod, D, exec, $menu
+bind = $mainMod, D, exec, pkill $menu || $menu
 bind = $mainMod, I, exec, $mainBrowser
 bind = $mainMod, B, exec, $secondaryBrowser
 bind = $mainMod, G, exec, $imageEditor
@@ -137,7 +140,7 @@ bind = $mainMod, N, exec, $lockscreen
 bind = $mainMod, O, exec, $discordClient
 bind = $mainMod, C, exec, $codeEditor
 bind = $mainMod, H, exec, $wallpaperChanger
-bind = $mainMod, R, exec, flatpak run org.videolan.VLC ~/Repos/dotfiles/videos/rick_roll.mp4 --fullscreen
+bind = $mainMod, R, exec, pkill vlc.bin || flatpak run org.videolan.VLC ~/Repos/dotfiles/videos/rick_roll.mp4 --fullscreen
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
