feat: adding wlogout theming files and images.

--- a/configs/.config/hypr/hyprland.conf
+++ b/configs/.config/hypr/hyprland.conf
@@ -55,9 +55,11 @@ decoration {
     layerrule = xray, waybar
     layerrule = xray, wofi
     layerrule = xray, alacritty
+    layerrule = xray, logout_dialog
     layerrule = blur, waybar
     layerrule = blur, wofi
     layerrule = blur, alacritty
+    layerrule = blur, logout_dialog
     
     blur {
         enabled = true
