feat: Adding hyprlock to lock the screen
- Hyprlock + theming
- Replacing Swaylock by  Hyprlock in hyprland.conf

--- a/configs/.config/hypr/hyprland.conf
+++ b/configs/.config/hypr/hyprland.conf
@@ -25,7 +25,7 @@ $secondaryBrowser = flatpak run com.brave.Browser
 $imageEditor = flatpak run org.gimp.GIMP
 $codeEditor = codium
 $discordClient = flatpak run xyz.armcord.Armcord
-$lockscreen = swaylock
+$lockscreen = hyprlock
 $wallpaperChanger = sh /usr/bin/wallpaper-switch
 
 # Some default env vars.
@@ -64,7 +64,7 @@ decoration {
     blur {
         enabled = true
         size = 7
-        contrast = 1 
+        contrast = 1
         passes = 2
         xray = true
     }
