fix: using a semi-relative path instead of a abolute path which were not working on other users

--- a/configs/.config/fastfetch/config.jsonc
+++ b/configs/.config/fastfetch/config.jsonc
@@ -5,7 +5,7 @@
     },
     "logo": {
         "color": {"1": "blue"},
-        "source": "/home/joulian/Repos/dotfiles/configs/.config/fastfetch/logo.txt",
+        "source": "~/Repos/dotfiles/configs/.config/fastfetch/logo.txt",
         "padding": {
             "top": 2,
             "left": 2
