feat: adding support for flameshot as my screenshot manager + updating screen scaling from 1.2x to 1.0x

--- a/configs/.config/hypr/hyprland.conf
+++ b/configs/.config/hypr/hyprland.conf
@@ -2,9 +2,9 @@
 # =========== KoruJurisan's config ============
 # =============================================
 
-monitor=,preferred,auto,1.20
-monitor=eDP-1,preferred,1599x0,1.20
-monitor=HDMI-A-1,preferred,0x0,1.20
+monitor=,preferred,auto,1
+monitor=eDP-1,preferred,1920x0,1
+monitor=HDMI-A-1,preferred,0x0,1
 
 # Gaming config
 # monitor=HDMI-A-1,preferred,2000x2000,1.20
@@ -17,6 +17,7 @@ exec-once = swww-daemon & waybar
 $mainMod = SUPER
 
 # Programs
+$screenshot = screenshot
 $terminal = alacritty
 $fileManager = thunar
 $menu = wofi
@@ -95,10 +96,6 @@ dwindle {
     force_split = 2
 }
 
-master {
-    new_is_master = true
-}
-
 gestures {
     workspace_swipe = true
     workspace_swipe_forever = true
@@ -114,13 +111,14 @@ windowrulev2=float,class:(Alacritty)
 windowrulev2=maxsize 750 500,class:(Alacritty)
 windowrulev2=xray 0,class:(Alacritty)
 windowrulev2=noshadow,class:(Alacritty)
+windowrulev2=bordercolor rgb(C6FFDD) rgb(FBD786) rgb(f7797d) 45deg,class:(Gimp)
 
 
 # Hyprland shortcuts
 bind = $mainMod, Q, killactive,
 bind = $mainMod, M, exec, wlogout
 bind = $mainMod, V, togglefloating, 
-bind = $mainMod, P, pseudo, 
+bind = $mainMod, H, pseudo, 
 bind = $mainMod, J, togglesplit,
 bind = $mainMod, F, fullscreen, 2
 binde =, XF86AudioRaiseVolume, exec, wpctl set-volume -l 1.5 @DEFAULT_AUDIO_SINK@ 5%+
@@ -143,6 +141,7 @@ bind = $mainMod, O, exec, $discordClient
 bind = $mainMod, C, exec, $codeEditor
 bind = $mainMod, H, exec, $wallpaperChanger
 bind = $mainMod, R, exec, pkill vlc.bin || flatpak run org.videolan.VLC ~/Repos/dotfiles/videos/rick_roll.mp4 --fullscreen
+bind = $mainMod, P, exec, $screenshot
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
