feat: adding support for my drawing tablet

--- a/configs/.config/hypr/hyprland.conf
+++ b/configs/.config/hypr/hyprland.conf
@@ -9,6 +9,16 @@ monitor=HDMI-A-1,preferred,0x0,1
 # Gaming config
 # monitor=HDMI-A-1,preferred,2000x2000,1.20
 
+# Tablet config
+# monitor=eDP-1,preferred,0x0,1
+# monitor=HDMI-A-1,prefered,1920x0,1
+
+# Tablet config
+device {
+  name = ugee-21.5-inch-pendisplay-stylus
+  output = HDMI-A-1
+  region_size = 1920, 1080
+}
 
 # Execute once at every launches
 exec-once = swww-daemon & waybar
