fix: updating the logo srouce to be relative to the ~/.config/fastfetch/... insteed of the ~/Repos/dotfiles/...

--- a/configs/.config/fastfetch/config.jsonc
+++ b/configs/.config/fastfetch/config.jsonc
@@ -5,7 +5,7 @@
     },
     "logo": {
         "color": {"1": "blue"},
-        "source": "~/Repos/dotfiles/configs/.config/fastfetch/logo.txt",
+        "source": "~/.config/fastfetch/logo.txt",
         "padding": {
             "top": 2,
             "left": 2
