feat: adding dotfiles for dunst (notification manager)

--- a/configs/.config/hypr/hyprland.conf
+++ b/configs/.config/hypr/hyprland.conf
@@ -71,6 +71,8 @@ decoration {
     layerrule = blur, wofi
     layerrule = blur, alacritty
     layerrule = blur, logout_dialog
+    layerrule = blur, notification
+    layerrule = xray, notification
     
     blur {
         enabled = true
