ci: updating my dotfiles to be able to switch to the next or previous wallpaper
- changing the animation when switching the wallpaper
- Removinv pseudo tiling which was using the "H" keystroke
- Remving the old wallpaper_switch with the new change_wallpaper script in /scripts/swww
- adding a small setup script for change_wallpaper

--- a/configs/.config/hypr/hyprland.conf
+++ b/configs/.config/hypr/hyprland.conf
@@ -37,7 +37,8 @@ $imageEditor = flatpak run org.gimp.GIMP
 $codeEditor = codium
 $discordClient = flatpak run xyz.armcord.Armcord
 $lockscreen = hyprlock
-$wallpaperChanger = sh /usr/bin/wallpaper-switch
+$nextWallpaper = change_wallpaper
+$previousWallpaper = change_wallpaper reverse
 
 # Some default env vars.
 env = XCURSOR_SIZE,20
@@ -130,7 +131,6 @@ windowrulev2=bordercolor rgb(C6FFDD) rgb(FBD786) rgb(f7797d) 45deg,class:(Gimp)
 bind = $mainMod, Q, killactive,
 bind = $mainMod, M, exec, wlogout
 bind = $mainMod, V, togglefloating, 
-bind = $mainMod, H, pseudo, 
 bind = $mainMod, J, togglesplit,
 bind = $mainMod, F, fullscreen, 2
 binde =, XF86AudioRaiseVolume, exec, wpctl set-volume -l 1.5 @DEFAULT_AUDIO_SINK@ 5%+
@@ -151,7 +151,8 @@ bind = $mainMod, G, exec, $imageEditor
 bind = $mainMod, N, exec, $lockscreen
 bind = $mainMod, O, exec, $discordClient
 bind = $mainMod, C, exec, $codeEditor
-bind = $mainMod, H, exec, $wallpaperChanger
+bind = $mainMod, H, exec, $nextWallpaper
+bind = $mainMod, K, exec, $previousWallpaper
 bind = $mainMod, R, exec, pkill vlc.bin || flatpak run org.videolan.VLC ~/Repos/dotfiles/videos/rick_roll.mp4 --fullscreen
 bind = $mainMod, P, exec, $screenshot
 
