--- a/configs/.config/hypr/hyprland.conf
+++ b/configs/.config/hypr/hyprland.conf
@@ -77,9 +77,9 @@ decoration {
     
     blur {
         enabled = true
-        size = 7
+        size = 9
         contrast = 1
-        passes = 2
+        passes = 3
         xray = true
     }
 
@@ -121,9 +121,10 @@ misc {
 
 # Windows's rules
 windowrulev2=float,class:(Alacritty)
-windowrulev2=maxsize 750 500,class:(Alacritty)
+windowrulev2=maxsize 880 550,class:(Alacritty)
 windowrulev2=xray 0,class:(Alacritty)
 windowrulev2=noshadow,class:(Alacritty)
+windowrulev2=bordercolor rgb(FF7698) rgb(FFD8F1) rgb(E373FF) rgb(8C7394) rgb(6277FF) 10deg rgba(FFFFFF00),class:(Alacritty)
 windowrulev2=bordercolor rgb(C6FFDD) rgb(FBD786) rgb(f7797d) 45deg,class:(Gimp)
 
 
