feat/fix: adding support for compose keys and remplacing deprecated way to add shadow on windows to a correct way of doing it

--- a/configs/.config/hypr/hyprland.conf
+++ b/configs/.config/hypr/hyprland.conf
@@ -20,6 +20,11 @@ device {
   region_size = 1920, 1080
 }
 
+input {
+  kb_layout = us
+  kb_options = compose:ralt
+}
+
 # Execute once at every launches
 exec-once = swww-daemon & waybar
 
@@ -83,10 +88,12 @@ decoration {
         xray = true
     }
 
-    drop_shadow = yes
-    shadow_range = 4
-    shadow_render_power = 3
-    col.shadow = rgba(1a1a1a55)
+    shadow {
+        enabled = true
+        range = 4
+        render_power = 3
+        color = rgba(1a1a1a55)
+    }
 }
 
 animations {
