ci: updating hyprland.conf to match the current browsers I am using

--- a/configs/.config/hypr/hyprland.conf
+++ b/configs/.config/hypr/hyprland.conf
@@ -36,8 +36,8 @@ $screenshot = screenshot
 $terminal = alacritty
 $fileManager = thunar
 $menu = wofi
-$mainBrowser = flatpak run io.gitlab.librewolf-community
-$secondaryBrowser = flatpak run com.brave.Browser
+$mainBrowser = librewolf
+$secondaryBrowser = chromium-browser
 $imageEditor = flatpak run org.gimp.GIMP
 $codeEditor = codium
 $discordClient = flatpak run xyz.armcord.Armcord
